# cut

./: .README-zh.md.swp  .cproject  .gitignore  .gitmodules  .project  AUTHORS  BUILD  CMakeLists.txt  GPATH  GRTAGS  GTAGS  LICENSE  README-en.md  README-zh.md  README.md  Rakefile  build.sh  install.sh
lib/options/test/: CMakeLists.txt  TestOption.cpp
src/: CMakeLists.txt
src/cpo/core/: Args.cpp  Cmdline.cpp  Option.cpp  OptionsDescription.cpp
src/cui/algo/: __string__.cpp
src/cui/utils/: __SourceFile__.cpp  __TypeName__.cpp
src/cum/base/: Description.cpp
src/cut/auto/: TestFactorySuite.cpp
src/cut/core/: TestCase.cpp  TestResult.cpp  TestRunner.cpp  TestSuite.cpp
src/cut/except/: AssertionError.cpp  Message.cpp  TestFailure.cpp
src/cut/ext/: RepeatedTest.cpp  TestDecorator.cpp
src/cut/hook/concept/: AfterAllHook.cpp  BeforeAllHook.cpp
src/cut/hook/registry/: UnconditionalHookRegistry.cpp
src/cut/hook/runtime/: Runtime.cpp
src/cut/listener/text/: ListAllTestPrinter.cpp  ProgressPrinter.cpp  TextResultPrinter.cpp
src/cut/listener/util/: Color.cpp  TestInfo.cpp  Timer.cpp  XmlBuilder.cpp  XmlDocument.cpp  XmlNode.cpp
src/cut/listener/xml/: XmlResultPrinter.cpp
src/cut/startup/: StartUp.cpp  TestOptions.cpp  main.cpp
src/hamcrest/base/: Description.cpp
src/hamcrest/core/: Description.cpp  IsNil.cpp  StringEndsWith.cpp  StringStartsWith.cpp  SubstringMatcher.cpp
src/hamcrest/core/matcher/: IsNil.cpp  StringContains.cpp  StringEndsWith.cpp  StringStartsWith.cpp  SubstringMatcher.cpp
src/infra/base/: Formatter.cpp  TypeString.cpp
src/magellan/auto/: TestFactoryRegistry.cpp
src/magellan/core/: AssertionError.cpp  Message.cpp  TestCaller.cpp  TestCase.cpp  TestFactoryRegistry.cpp  TestFailure.cpp  TestOption.cpp  TestResult.cpp  TestRunner.cpp  TestSuite.cpp
src/magellan/except/: AssertionError.cpp  Message.cpp  TestFailure.cpp
src/magellan/ext/: RepeatedTest.cpp  TestDecorator.cpp
src/magellan/framework/auto/: TestFactoryRegistry.cpp
src/magellan/framework/core/: AssertionError.cpp  Message.cpp  StartUp.cpp  TestCase.cpp  TestFactoryRegistry.cpp  TestFailure.cpp  TestProgressListener.cpp  TestResult.cpp  TestSuite.cpp
src/magellan/framework/except/: AssertionError.cpp  Message.cpp  TestFailure.cpp
src/magellan/framework/ext/: RepeatedTest.cpp  TestDecorator.cpp
src/magellan/framework/listener/: Color.cpp  ResultPrinter.cpp  TestProgressListener.cpp  Timer.cpp
src/magellan/framework/runner/: TestRunner.cpp
src/magellan/framework/startup/: StartUp.cpp
src/magellan/hook/runtime/: Runtime.cpp
src/magellan/listener/: Color.cpp  ListenerFactory.cpp  ResultPrinter.cpp  Timer.cpp
src/magellan/options/: MagellanOptions.cpp  OptionRepositry.cpp
src/magellan/startup/: StartUp.cpp  TestOptions.cpp
(+777 files in other folders)
